[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools >= 61", "numpy", "cython", "coolprop==7.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PDSim"
version = "2.15"
description = "A flexible open-source framework for the quasi-steady-state simulation of positive displacement machines including compressors and expanders"
authors = [
    {name = "Ian Bell", email = "ian.h.bell@gmail.com"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "numpy",
    "cython",
    "coolprop==7.1.0",
    "quantities",
    "six>=1.17.0",
    "matplotlib>=3.7.5",
    "scipy>=1.10.1",
    "h5py>=3.11.0",
]

[project.urls]
Homepage = "http://pdsim.sourceforge.net"

[dependency-groups]
dev = []

[tool.setuptools.packages.find]
where = ["."]
include = ["PDSim*"]
